# knn_serving

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.centos  README.md  docker-compose.yml  hdfs_downloader.py  knn_data_transcode.py  setup.sh  transcode.sh
ci/: build_script_cpp.sh
ci/travis/: before-install.sh  travis_install_centos.sh  travis_install_ubuntu.sh  travis_script_cpp.sh
cmake/: DefineOptions.cmake  boost.cmake  buildutils.cmake  cares.cmake  gflags.cmake  grpc.cmake  protobuf.cmake  rapidjson.cmake  thirdparty.cmake  urls.cmake  zlib.cmake
include/tsl/: robin_hash.h
src/cpp/: CMakeLists.txt  KnnIndex.h  hnswLibJni.h  hnswindex.h  knnServiceLib.h  knnservice.cc  knnservice.h  knnserviceC.h  main.cc
src/proto/: CMakeLists.txt  knn.proto
